--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.21.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "reconlx": "^1.0.46",
     "some-random-cat": "^1.0.55",
-    "wokcommands": "^1.1.3"
+    "wokcommands": "^1.1.3",
+    "ytdl-core": "^4.1.2"
   }
 }
