--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "canvas": "^2.6.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "hangcord": "0.0.5",
     "reconlx": "^1.0.46",
     "snakecord": "0.0.6",
-    "some-random-cat": "^1.0.55",
+    "some-random-cat": "^1.1.0",
     "string-progressbar": "^1.0.1",
     "wokcommands": "^1.1.3",
     "ytdl-core": "^4.1.2"
