--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "axios": "^0.21.0",
     "canvas": "^2.6.1",
+    "discord-emoji-convert": "^1.6.0",
+    "discord-giveaway": "^1.1.2",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "hangcord": "0.0.5",
+    "ms": "^2.1.3",
     "reconlx": "^1.0.46",
     "snakecord": "0.0.6",
     "some-random-cat": "^1.1.0",
