--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "discord-giveaway": "^1.1.2",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "hangcord": "0.0.5",
+    "mongoose": "^5.11.8",
     "ms": "^2.1.3",
     "reconlx": "^1.0.46",
     "snakecord": "0.0.6",
